--- a/数据结构题目/4、字符串.md
+++ b/数据结构题目/4、字符串.md
@@ -694,7 +694,7 @@ class Solution {
 
   pk-1 pk = pj-k pj-k+1 ... pj-1 pj ，那么在包含pj的模式串中有最大长度为k+1的相同前缀后缀。举个例子，如果给定的模式串为“abab”，那么它的各个子串的前缀后缀的公共元素的最大长度如下表格所示：
 
-  > ![](https://img-blog.csdn.net/20140819173639786)
+  > ![016.jpg (567×91) (raw.githubusercontent.com)](https://raw.githubusercontent.com/vankykoo/image/main/pic/016.jpg)
   >
   > 比如对于字符串aba来说，它有长度为1的相同前缀后缀a；而对于字符串abab来说，它有长度为2的相同前缀后缀ab（相同前缀后缀的长度为k+1，k+1 = 2）
 
@@ -702,7 +702,7 @@ class Solution {
 
 * next数组考虑的是除当前字符外的最长相同前缀后缀，所有通过第一步骤求得各个前缀后缀的公共元素的最大长度后，只要稍作变形即可：将第一步骤中求得的值整体右移一位，然后初值赋为-1，如下表格所示：
 
-> ![](https://img-blog.csdn.net/20140819173649739)
+> ![017.jpg (569×89) (raw.githubusercontent.com)](https://raw.githubusercontent.com/vankykoo/image/main/pic/017.jpg)
 >
 > 比如对于aba来说，第三个字符a之前的字符串ab中有长度为0的相同前缀后缀，所以第三个字符a对应的next值为0；而对于abab来说，第4个字符b之前的字符串aba中有长度为1的相同前缀后缀a，所以第4个字符b对应的next值为1（相同前缀后缀的长度为k，k=1）。
 
@@ -716,7 +716,7 @@ class Solution {
 
   pk-1对应着文本串si-k, si-k+1, ..., si-1，而后让pk跟si继续匹配。如下图所示：
 
-  > ![](https://img-blog.csdn.net/20140812223633281)
+  > ![018.jpg (673×244) (raw.githubusercontent.com)](https://raw.githubusercontent.com/vankykoo/image/main/pic/018.jpg)
 
 综上，KMP的next数组相当于告诉我们：当模式串中的某个字符跟文本串中的某个字符匹配失败时，模式串下一步应该跳到哪个位置。如模式串在j处的字符跟文本串在i处的字符匹配失败时，下一步用next[j]处的字符继续跟文本串i处的字符匹配，相当于模式串向右移动j-next[j]位。
 
