--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -108,7 +108,7 @@ class Solution {
 
 ### 题目
 
-
+![019.png (717×843) (raw.githubusercontent.com)](https://raw.githubusercontent.com/vankykoo/image/main/pic/019.png)
 
 ### 思路
 
@@ -1474,7 +1474,7 @@ public void testMultiPack2(){
 
 递推公式：
 
-![](C:\Users\86180\Desktop\picPick\216.png)
+![20.png (912×592) (raw.githubusercontent.com)](https://raw.githubusercontent.com/vankykoo/image/main/pic/20.png)
 
 
 
