--- a/数据结构题目/动态规划.md
+++ b/数据结构题目/动态规划.md
@@ -1547,59 +1547,1422 @@ class Solution {
 
 
 
+## 二十三、打家劫舍Ⅱ
+
+### 题目
+
+![](https://raw.githubusercontent.com/vankykoo/javaStudy/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%AD%A6%E4%B9%A0%E9%A2%98%E7%9B%AE/dp/226.png)
+
+
+
+### 思路
+
+房间成环，意思是最后一间和第一间不能同时选。
+
+把圆圈变成直线。
+
+那么分成三种情况：
+
+​	①首尾都不选
+
+​	②首选，尾不选
+
+​	③首不选，尾选
+
+而情况二三已经包含了情况一了。所以只对情况二，情况三进行第一次打家劫舍的思路，看看谁大就选谁。
+
+
+
+### 代码
+
+```java
+class Solution {
+    public int rob(int[] nums) {
+        if (nums == null || nums.length == 0)
+            return 0;
+        int len = nums.length;
+        if (len == 1)
+            return nums[0];
+        return Math.max(robAction(nums, 0, len - 1), robAction(nums, 1, len));
+    }
+
+    int robAction(int[] nums, int start, int end) {
+        int x = 0, y = 0, z = 0;
+        for (int i = start; i < end; i++) {
+            y = z;
+            z = Math.max(y, x + nums[i]);
+            x = y;
+        }
+        return z;
+    }
+}
+```
+
+
+
+## 二十四、打家劫舍Ⅲ
+
+### 题目
+
+![](https://raw.githubusercontent.com/vankykoo/javaStudy/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%AD%A6%E4%B9%A0%E9%A2%98%E7%9B%AE/dp/228.png)
+
+
+
+### 思路
+
+二叉树，肯定是要考虑遍历顺序的，这里选**后序遍历**，因为父节点偷不偷要看子节点偷不偷。
+
+还要使用到动态规划，因为这个偷不偷要看上一个人的脸色，与上一个有关。
+
+动规五部曲 + 递归：
+
+①dp数组：每一层递归都有属于自己的dp数组，dp数组只有两个元素，第一个是如果当前节点不偷能获得的最大钱数，第二个元素是如果当前节点偷，能获得的最大钱数，遇到空节点直接返回0。那么dp[0]代表不偷，dp[1]代表不偷。递归的返回值也是这个dp数组，因为上一层要看下一层脸色。
+
+②遍历顺序：后序遍历
+
+③递推公式：
+
+**不偷** ：就是取两个字节的偷或不偷的最大值，因为自己不偷，子节点偷不偷的无所谓，钱多就行。
+
+**偷** ：就是字节的都不偷的钱，加上当前节点的钱。
+
+       	1. 不偷：dp[1] = Math.max(left[0], left[1]) + Math.max(right[0] + right[1]);
+        	2. 偷：dp[0] = left[0] + right[0] + root.val;
+
+
+
+### 代码
+
+```java
+class Solution {
+    public int rob(TreeNode root) {
+        int[] res = robAction1(root);
+        return Math.max(res[0], res[1]);
+    }
+
+    int[] robAction1(TreeNode root) {
+        int res[] = new int[2];
+        if (root == null)
+            return res;
+
+        int[] left = robAction1(root.left);
+        int[] right = robAction1(root.right);
+
+        res[0] = Math.max(left[0], left[1]) + Math.max(right[0], right[1]);
+        res[1] = root.val + left[0] + right[0];
+        return res;
+    }
+}
+```
+
+
+
+## 二十五、买卖股票的最佳时机
+
+### 题目
+
+![](https://raw.githubusercontent.com/vankykoo/javaStudy/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%AD%A6%E4%B9%A0%E9%A2%98%E7%9B%AE/dp/232.png)
+
+### 思路
+
+定义一个二维数组，每一层有两个值，一个值是记录持有彩票时可拥有的最多钱，另一个值记录不持有彩票时可拥有的最多钱。
+
+动规五部曲：
+
+①dp\[i][0]的含义：持有彩票时可拥有的最多钱；dp\[i][1]的含义：不持有彩票时可拥有的最多钱。
+
+②递推公式：
+
+* 如果想持有彩票，即dp\[i][0]的取值：
+
+  * 第i-1天就持有股票，那么就保持现状，所得现金就是昨天持有股票的所得现金 即：dp\[i - 1][0]
+  * 第i天买入股票，所得现金就是买入今天的股票后所得现金即：-prices[i]
+
+  `dp[i][0] = max(dp[i - 1][0], -prices[i]);`
+
+
+
+* 如果不想持有彩票，即dp\[i][1]的取值：
+
+  * 第i-1天就不持有股票，那么就保持现状，所得现金就是昨天不持有股票的所得现金 即：dp\[i - 1][1]
+  * 第i天卖出股票，所得现金就是按照今天股票价格卖出后所得现金即：prices[i] + dp\[i - 1][0]
+
+  `dp[i][1] = max(dp[i - 1][1], prices[i] + dp[i - 1][0]);`
+
+③初始化：
+
+dp\[i][0]：持有彩票：dp\[i][0] -= prices[0];
+
+dp\[i][1] ：不持有彩票：dp\[i][1] = 0;
+
+④遍历顺序：从前往后遍历
+
+⑤打印dp数组
+
+
+
+### 代码
+
+```java
+class Solution {
+    public int maxProfit(int[] prices) {
+        if (prices == null || prices.length == 0) return 0;
+        int length = prices.length;
+        // dp[i][0]代表第i天持有股票的最大收益
+        // dp[i][1]代表第i天不持有股票的最大收益
+        int[][] dp = new int[length][2];
+        int result = 0;
+        dp[0][0] = -prices[0];
+        dp[0][1] = 0;
+        for (int i = 1; i < length; i++) {
+            dp[i][0] = Math.max(dp[i - 1][0], -prices[i]);
+            dp[i][1] = Math.max(dp[i - 1][0] + prices[i], dp[i - 1][1]);
+        }
+        return dp[length - 1][1];
+    }
+}
+```
 
 
 
 
 
+## 二十六、买卖股票的最佳时机Ⅱ
+
+### 题目
+
+![233.png (906×1120) (raw.githubusercontent.com)](https://raw.githubusercontent.com/vankykoo/javaStudy/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%AD%A6%E4%B9%A0%E9%A2%98%E7%9B%AE/dp/233.png)
+
+
+
+### 思路
+
+* 我的思路：
+  * 和上一题差不多，递推公式有一点变化。
+  * 一但有钱赚就卖出去，如果卖出去的话要置零，即从当前节点从新开始。
+* 答案思路：
+  * 把赚的钱记录在dp数组里面，没有另设一个result值。
+  * 如果有钱赚就累加起来。
+
+
+
+### 代码
+
+我的代码
+
+```java
+class Solution {
+    public int maxProfit(int[] prices) {
+        int len = prices.length;
+        if(len == 0) return 0;
+
+        int result = 0;
+        int[][] dp = new int[len][2];
+
+        //初始化
+        dp[0][0] = 0;
+        dp[0][1] -= prices[0];
+
+        for(int i = 1; i < len; i++){
+            int sellPrice = prices[i] + dp[i - 1][1];
+
+            if(sellPrice > 0){
+                //卖了
+                result += sellPrice;
+                dp[i][0] = 0;
+                dp[i][1] = 0 - prices[i];
+                continue;
+            }else{
+                dp[i][0] = Math.max(dp[i - 1][0], sellPrice);
+                dp[i][1] = Math.max(dp[i - 1][1], 0 - prices[i]);
+            }
+
+        }
+
+        return result;
+    }
+}
+```
+
+答案代码
+
+```java
+class Solution 
+    // 实现1：二维数组存储
+    // 可以将每天持有与否的情况分别用 dp[i][0] 和 dp[i][1] 来进行存储
+    // 时间复杂度：O(n)，空间复杂度：O(n)
+    public int maxProfit(int[] prices) {
+        int n = prices.length;
+        int[][] dp = new int[n][2];     // 创建二维数组存储状态
+        dp[0][0] = 0;                   // 初始状态
+        dp[0][1] = -prices[0];
+        for (int i = 1; i < n; ++i) {
+            dp[i][0] = Math.max(dp[i - 1][0], dp[i - 1][1] + prices[i]);    // 第 i 天，没有股票
+            dp[i][1] = Math.max(dp[i - 1][1], dp[i - 1][0] - prices[i]);    // 第 i 天，持有股票
+        }
+        return dp[n - 1][0];    // 卖出股票收益高于持有股票收益，因此取[0]
+    }
+}
+```
+
+
+
+## 二十七、买卖股票的最佳时机Ⅲ
+
+### 题目
+
+![235.png (896×1195) (raw.githubusercontent.com)](https://raw.githubusercontent.com/vankykoo/javaStudy/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%AD%A6%E4%B9%A0%E9%A2%98%E7%9B%AE/dp/235.png)
+
+### 思路
+
+难点：可以买卖两次。
+
+
+
+①dp数组的含义
+
+* 分为四种状态：
+  1. 第一次持有股票
+  2. 第一次不持有股票
+  3. 第二次持有股票
+  4. 第二次不持有股票
+
+dp\[i][j] 表示第 i 天，第 j 种状态可拥有的最大钱数。
+
+②递推公式：
+
+达到dp\[i][1]状态，有两个具体操作：
+
+- 操作一：**第i天买入股票了**，那么dp\[i][1] = dp\[i-1][0] - prices[i]
+- 操作二：**第i天没有操作**，而是沿用前一天买入的状态，即：dp\[i][1] = dp\[i - 1][1]
+
+那么dp\[i][1]究竟选 dp\[i-1][0] - prices[i]，还是dp\[i - 1][1]呢？
+
+一定是选最大的，所以 dp\[i][1] = max(dp\[i-1][0] - prices[i], dp\[i - 1][1]);
+
+同理dp\[i][2]也有两个操作：
+
+- 操作一：**第i天卖出股票了**，那么dp\[i][2] = dp\[i - 1][1] + prices[i]
+- 操作二：**第i天没有操作**，沿用前一天卖出股票的状态，即：dp\[i][2] = dp\[i - 1][2]
+
+所以dp\[i][2] = max(dp\[i - 1][1] + prices[i], dp\[i - 1][2])
+
+同理可推出剩下状态部分：
+
+dp\[i][3] = max(dp\[i - 1][3], dp\[i - 1][2] - prices[i]);
+
+dp\[i][4] = max(dp\[i - 1][4], dp\[i - 1][3] + prices[i]);
+
+③初始化：只需要初始化两个拥有彩票的状态即可
+
+dp\[0][1] = -price[0];
+
+dp\[0][3] = -price[0];
+
+其他都为0.
+
+④遍历顺序：从前往后
+
+⑤打印dp数组
+
+![](https://code-thinking-1253855093.file.myqcloud.com/pics/20201228181724295-20230310134201291.png)
+
+
+
+### 代码
+
+```java
+// 版本一
+class Solution {
+    public int maxProfit(int[] prices) {
+        int len = prices.length;
+        // 边界判断, 题目中 length >= 1, 所以可省去
+        if (prices.length == 0) return 0;
+
+        /*
+         * 定义 5 种状态:
+         * 0: 没有操作, 1: 第一次买入, 2: 第一次卖出, 3: 第二次买入, 4: 第二次卖出
+         */
+        int[][] dp = new int[len][5];
+        dp[0][1] = -prices[0];
+        // 初始化第二次买入的状态是确保 最后结果是最多两次买卖的最大利润
+        dp[0][3] = -prices[0];
+
+        for (int i = 1; i < len; i++) {
+            dp[i][1] = Math.max(dp[i - 1][1], -prices[i]);
+            dp[i][2] = Math.max(dp[i - 1][2], dp[i - 1][1] + prices[i]);
+            dp[i][3] = Math.max(dp[i - 1][3], dp[i - 1][2] - prices[i]);
+            dp[i][4] = Math.max(dp[i - 1][4], dp[i - 1][3] + prices[i]);
+        }
+
+        return dp[len - 1][4];
+    }
+}
+
+// 版本二: 空间优化
+class Solution {
+    public int maxProfit(int[] prices) {
+        int[] dp = new int[4]; 
+        // 存储两次交易的状态就行了
+        // dp[0]代表第一次交易的买入
+        dp[0] = -prices[0];
+        // dp[1]代表第一次交易的卖出
+        dp[1] = 0;
+        // dp[2]代表第二次交易的买入
+        dp[2] = -prices[0];
+        // dp[3]代表第二次交易的卖出
+        dp[3] = 0;
+        for(int i = 1; i <= prices.length; i++){
+            // 要么保持不变，要么没有就买，有了就卖
+            dp[0] = Math.max(dp[0], -prices[i-1]);
+            dp[1] = Math.max(dp[1], dp[0]+prices[i-1]);
+            // 这已经是第二次交易了，所以得加上前一次交易卖出去的收获
+            dp[2] = Math.max(dp[2], dp[1]-prices[i-1]);
+            dp[3] = Math.max(dp[3], dp[2]+ prices[i-1]);
+        }
+        return dp[3];
+    }
+}
+```
 
 
 
 
 
+## 二十八、买卖股票的最佳时机Ⅳ
+
+### 题目
+
+![236.png (901×962) (raw.githubusercontent.com)](https://raw.githubusercontent.com/vankykoo/javaStudy/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%AD%A6%E4%B9%A0%E9%A2%98%E7%9B%AE/dp/236.png)
 
 
 
 
 
+### 思路
+
+和上一题差不多，只是把两次换成了k次，所以现在分为2k种状态，奇数是持有股票的状态，偶数是不持有股票的状态。
+
+动规五部曲：
+
+①`dp[i][j]`数组的含义：第 i - 1 天 状态为 j 的可获得的最大钱数
+
+每天有两种状态：
+
+```txt
+j = 1时，表示第一天持有股票可获得的最大钱数；
+j = 2时，表示第一天不持有股票可获得的最大钱数；
+j = 3时，表示第二天持有股票可获得的最大钱数；
+j = 4时，表示第二天不持有股票可获得的最大钱数；
+......
+```
+
+②递推公式：
+
+* 奇数时：`dp[i][j] = Math.max(dp[i-1][j - 1] - prices[i], dp[i - 1][j]);`
+  * ①今天买 ：`dp[i - 1][j - 1] - prices[i]`
+  * ②沿用之前的持有状态：`dp[i - 1][j]`
+* 偶数时：`dp[i][j] = Math.max(dp[i - 1][j - 1] + prices[i], dp[i - 1][j]);`
+  * ①把昨天的持有的股票卖掉：`dp[i - 1][j - 1] + prices[i]`
+  * ②沿用之前的不持有状态：`dp[i - 1][j]`
+
+③初始化dp数组：
+
+第一天如果想持有股票，那只能是买第一天的股票，所以所有的j为奇数的元素都赋值为 `-prices[0]` ，其他赋值为0；
+
+④遍历顺序：
+
+按照prices从前往后
+
+⑤打印dp数组
+
+
+
+### 代码
+
+```java
+class Solution {
+    public int maxProfit(int k, int[] prices) {
+        int len = prices.length;
+        int[][] dp = new int[len][k * 2 + 1];
+        
+      //初始化dp数组
+        for(int i = 1; i < k * 2 + 1; i += 2){
+            dp[0][i] = -prices[0];
+        }
+
+        for(int i = 1; i < len; i++){
+            for(int j = 1; j < (k * 2 + 1); j++){
+                if(j % 2 == 0){
+                  //j为偶数
+                    dp[i][j] = Math.max(dp[i - 1][j - 1] + prices[i], dp[i - 1][j]);
+                }else{
+                  //j为奇数
+                    dp[i][j] = Math.max(dp[i-1][j - 1] - prices[i], dp[i - 1][j]);
+                }
+            }
+        }
+
+        return dp[len - 1][k * 2];
+    }
+}
+```
 
 
 
 
 
+## 二十九、买卖股票的最佳时期含冷冻期
+
+### 题目
+
+![238.png (903×816) (raw.githubusercontent.com)](https://raw.githubusercontent.com/vankykoo/javaStudy/7dc1799a3499270662fcb4852f0d30f7d2537d75/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%AD%A6%E4%B9%A0%E9%A2%98%E7%9B%AE/dp/238.png)
+
+
+
+### 思路
+
+分为四种状态：
+
+![237.png (3068×1174) (raw.githubusercontent.com)](https://raw.githubusercontent.com/vankykoo/javaStudy/7dc1799a3499270662fcb4852f0d30f7d2537d75/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%AD%A6%E4%B9%A0%E9%A2%98%E7%9B%AE/dp/237.png)
+
+
+
+动规五部曲：
+
+①dp数组的含义：dp\[i][j]表示第 i 天时第 j 种状态可以拥有的最大钱数。
+
+②递推公式：
+
+由上图可知，如果有两种状态，就选比较大的。
+
+则递推公式：
+
+```java
+dp[i][0] = Math.max(dp[i][0], dp[i - 1][3], dp[i-1][1] - prices[i]);
+dp[i][1] = Math.max(dp[i - 1][1], dp[i - 1][3]);
+dp[i][2] = dp[i-1][0] + prices[i];
+dp[i][3] = dp[i - 1][2];
+```
+
+③初始化：
+
+因为各自状态只与当天股价和前一天的状态有关，所以应该初始化第一天的状态。
+
+```java
+dp[0][0] = -prices[0];
+dp[0][1] = 0;
+dp[0][2] = 0;
+dp[0][3] = 0;
+```
+
+④遍历顺序：从前往后
+
+⑤打印dp数组
+
+
+
+### 代码
+
+```java
+class Solution {
+    public int maxProfit(int[] prices) {
+        int len = prices.length;
+        if(len <= 1) return 0;
+
+        int[][] dp = new int[len][4];
+
+        //初始化
+        dp[0][0] = -prices[0]; 
+
+        for(int i = 1; i < len; i++){
+            //状态一
+            dp[i][0] = Math.max(dp[i-1][0], Math.max(dp[i - 1][3] - prices[i], dp[i-1][1] - prices[i]));
+            //状态二
+            dp[i][1] = Math.max(dp[i - 1][1], dp[i - 1][3]);
+            //状态三
+            dp[i][2] = dp[i-1][0] + prices[i];
+            //状态四
+            dp[i][3] = dp[i - 1][2];
+        }
+
+        //返回三种不持有股票中的钱数最大值
+        return Math.max(dp[len-1][1],Math.max(dp[len-1][2],dp[len-1][3]));
+    }
+}
+```
 
 
 
 
 
+## 三十、买卖股票的最佳时期含手续费
+
+### 题目
+
+![239.png (790×1023) (raw.githubusercontent.com)](https://raw.githubusercontent.com/vankykoo/javaStudy/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%AD%A6%E4%B9%A0%E9%A2%98%E7%9B%AE/dp/239.png)
+
+
+
+### 思路
+
+和之前可以买卖k次的一样，只是在卖股票时加了手续费。
+
+
+
+### 代码
+
+```java
+class Solution {
+    public int maxProfit(int[] prices, int fee) {
+        int len = prices.length;
+        int[][] dp = new int[len][2];
+
+        //初始化
+        dp[0][1] -= prices[0];
+
+        for(int i = 1; i < len; i++){
+          //这里0是不持有股票，1是持有股票
+            dp[i][0] = Math.max(dp[i-1][0],prices[i] + dp[i-1][1] - fee);
+            dp[i][1] = Math.max(dp[i-1][1],dp[i-1][0] - prices[i]);
+        }
+
+        return dp[len-1][0];
+
+    }
+}
+```
+
+
+
+```java
+//答案：一维数组优化
+// 一维数组优化
+class Solution {
+    public int maxProfit(int[] prices, int fee) {
+    int[] dp = new int[2];
+    dp[0] = -prices[0];
+    dp[1] = 0;
+    for (int i = 1; i <= prices.length; i++) {
+      //这里0是持有股票，1是不持有股票
+      dp[0] = Math.max(dp[0], dp[1] - prices[i - 1]);
+      dp[1] = Math.max(dp[1], dp[0] + prices[i - 1] - fee);
+    }
+    return dp[1];
+    }
+}
+```
+
+
+
+## 三十一、最长递增子序列
+
+### 题目
+
+![241.png (759×849) (raw.githubusercontent.com)](https://raw.githubusercontent.com/vankykoo/javaStudy/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%AD%A6%E4%B9%A0%E9%A2%98%E7%9B%AE/dp/241.png)
+
+
+
+### 思路
+
+我的思路：
+
+* 第一层for：遍历nums数组。
+
+
+* 第二层for：遍历dp数组
+  * 将nums[i] 与 dp[j] 比较，如果nums[i] <= dp[j] 那么就将dp[j] 换成 nums[i] ，然后直接break。如果不break，后面的数都会被换掉。这样做不影响最大长度，而且满足最后的结果是子序列的最大长度，但是这里的dp数组内的元素不是子序列。
+* 跳出第二层for循环之后，判断一下nums[i] 是否 大于dp数组的最后一个数，如果大于，那么dp数组的长度要加一。【在第一层for循环内】
+
+
+
+以 `nums = [10,9,2,5,3,7,101,18]` 为例：
+
+![240.png (1023×452) (raw.githubusercontent.com)](https://raw.githubusercontent.com/vankykoo/javaStudy/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%AD%A6%E4%B9%A0%E9%A2%98%E7%9B%AE/dp/240.png)
+
+### 代码
+
+我的代码【4ms，答案70ms，我的比答案快嘿嘿】
+
+```java
+class Solution {
+    public int lengthOfLIS(int[] nums) {
+        int len = nums.length;
+        if(len == 1){
+            return 1;
+        }
+
+        int[] dp = new int[len];
+        int maxLen = 0;
+
+        dp[0] = nums[0];
+        maxLen = 1;
+
+        for(int i = 1; i < len; i++){
+            for(int j = 0; j < maxLen; j++){
+                if(nums[i] <= dp[j]){
+                    dp[j] = nums[i];
+                    break;
+                }
+            }
+
+            if(nums[i] > dp[maxLen - 1]){
+                dp[maxLen] = nums[i];
+                maxLen++;
+            }
+        }
+
+        return maxLen;
+    }
+}
+```
+
+答案代码：
+
+```java
+class Solution {
+    public int lengthOfLIS(int[] nums) {
+        int[] dp = new int[nums.length];
+        int res = 0;
+        Arrays.fill(dp, 1);
+        for (int i = 1; i < dp.length; i++) {
+            for (int j = 0; j < i; j++) {
+                if (nums[i] > nums[j]) {
+                    dp[i] = Math.max(dp[i], dp[j] + 1);
+                }
+                res = Math.max(res, dp[i]);
+            }
+        }
+        return res;
+    }
+}
+```
+
+
+
+## 三十二、最长连续递增序列
+
+### 题目
+
+![242.png (801×847) (raw.githubusercontent.com)](https://raw.githubusercontent.com/vankykoo/javaStudy/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%AD%A6%E4%B9%A0%E9%A2%98%E7%9B%AE/dp/242.png)
+
+### 思路
+
+动规五部曲：
+
+①dp[i] 的含义：表示到 nums[i] 的时候，已经连续递增的长度
+
+②递推公式：
+
+​	如果nums[i] 大于nums[i-1] ，那么就让`dp[i] = dp[i-1] + 1;` 然后更新res值。
+
+​	如果nums[i] 不大于 nums[i-1]，说明递增序列断了，就让 `dp[i] = 1`；
+
+③dp数组初始化：让dp[0] = 1；
+
+④遍历顺序：从前往后
+
+⑤打印dp数组。
+
+
+
+### 代码
+
+```java
+class Solution {
+    public int findLengthOfLCIS(int[] nums) {
+        int len = nums.length;
+        int[] dp = new int[len];
+
+        dp[0] = 1;
+        int res = 1;
+
+        for(int i = 1; i < len; i++){
+            if(nums[i] > nums[i - 1]){
+                dp[i] = dp[i - 1] + 1;
+                res = Math.max(res,dp[i]);
+            }else{
+                dp[i] = 1;
+            }
+        }
+
+        return res;
+    }
+}
+```
+
+
+
+## 三十三、最长重复子数组
+
+### 题目
+
+![001.png (901×676) (raw.githubusercontent.com)](https://raw.githubusercontent.com/vankykoo/javaStudy/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%AD%A6%E4%B9%A0%E9%A2%98%E7%9B%AE/dp/001.png)
+
+### 思路
+
+动规五部曲：
+
+①dp\[i][j]数组的含义：表示`数组1的下标为 i - 1 的元素`与`数组2的下标的为 j - 1 的元素` 及它们之前有多少个相同的元素。
+
+②递推公式：双重for循环，把所有元素都遍历一遍遇到相同的两个相同的元素，只需要把两个元素的上一个元素的相同数加一即可。【这么说可能有点抽象，看图就知道了】
+
+![](https://code-thinking-1253855093.file.myqcloud.com/pics/2021011215282060-20230310134554486.jpg)
+
+③初始化：dp\[i][0] 和 dp\[0][i] 都要赋值为0。
+
+④遍历顺序：都是从前往后遍历。
+
+⑤打印dp数组
 
 
 
 
 
+### 代码
+
+```java
+class Solution {
+    public int findLength(int[] nums1, int[] nums2) {
+        int len1 = nums1.length;
+        int len2 = nums2.length;
+
+        int[][] dp = new int[len1+1][len2+1];
+        int res = 0;
+
+        for(int i = 0; i < len1; i++){
+            for(int j = 0; j < len2; j++){
+                if(nums1[i] == nums2[j]){
+                    dp[i+1][j+1] = dp[i][j] + 1;
+                    res = Math.max(res,dp[i+1][j+1]);
+                }
+            }
+        }
+
+        return res;
+    }
+}
+```
 
 
 
 
 
+## 三十四、最长公共子序列
+
+### 题目
+
+![025.png (908×1044) (raw.githubusercontent.com)](https://raw.githubusercontent.com/vankykoo/javaStudy/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%AD%A6%E4%B9%A0%E9%A2%98%E7%9B%AE/dp/025.png)
+
+### 思路
+
+以text1 = "abcde" 和 text2 = "ace" 举例。
+
+动规五部曲：
+
+①dp\[i][j] 的含义：表示 从 text1 的[0, i-1] 的部分 和 text2的[0，j-1] 的部分的最长公共子序列。
+
+比如dp\[4][2]  ： 表示 "abcd" 和 "ac" 的最长公共子序列
+
+②递推公式：分为两种情况：
+
+1. 两个字符不相等：
+
+   那么就取 `dp[i+1][j+1] = dp[i][j+1] + dp[i+1][j];`
+
+   比如 text1 的 d 和 text2 的 e 不相等，那么就看，"abcd" 和 “ac" 的最长公共子序列  与   "abc" 与  "ace"的最长公共子序列的较大值。
+
+2. 两个字符相等：
+
+   那么就取 `dp[i+1][j+1] = dp[i][j] + 1;`
+
+   比如 text1 的 e 和 text2 的 e 相等，那么就是 "abcd" 与 "ac" 的最长公共子序列 + 1；
+
+③初始化：`dp[0][j]` 和 `dp[i][0]` 初始化为0。
+
+④遍历顺序：从前往后，双重for循环。
+
+⑤打印dp数组：
+
+![](https://code-thinking-1253855093.file.myqcloud.com/pics/20210210150215918.jpg)
+
+
+
+### 代码
+
+```java
+class Solution {
+    public int longestCommonSubsequence(String text1, String text2) {
+        int len1 = text1.length();
+        int len2 = text2.length();
+
+        int[][] dp = new int[len1+1][len2+1];
+
+        for(int i = 0; i < len1; i++){
+            for(int j = 0; j < len2; j++){
+                if(text1.charAt(i) == text2.charAt(j)){
+                    dp[i+1][j+1] = dp[i][j] + 1;
+                }else {
+                    dp[i+1][j+1] = Math.max(dp[i][j+1],dp[i+1][j]);
+                }
+            }
+        }
+
+        return dp[len1][len2];
+    }
+}
+```
 
 
 
 
 
+## 三十五、不相交的线
+
+### 题目
+
+![](https://raw.githubusercontent.com/vankykoo/javaStudy/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%AD%A6%E4%B9%A0%E9%A2%98%E7%9B%AE/dp/030.png)
+
+### 思路
+
+简单分析一下题目，就是和上一题“最长公共子序列”一样的题目。
+
+
+
+###代码
+
+```java
+class Solution {
+    public int maxUncrossedLines(int[] nums1, int[] nums2) {
+        int len1 = nums1.length;
+        int len2 = nums2.length;
+
+        int[][] dp = new int[len1 + 1][len2 + 1];
+
+        for(int i = 0; i < len1; i++){
+            for(int j = 0; j < len2; j++){
+                if(nums1[i] == nums2[j]){
+                    dp[i+1][j+1] = dp[i][j] + 1;
+                }else{
+                    dp[i+1][j+1] = Math.max(dp[i][j+1], dp[i+1][j]);
+                }
+            }
+        }
+
+        return dp[len1][len2];
+    }
+}
+```
 
 
 
 
 
+##三十六、最大子数组和
+
+###题目
+
+![031.png (901×930) (raw.githubusercontent.com)](https://raw.githubusercontent.com/vankykoo/javaStudy/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%AD%A6%E4%B9%A0%E9%A2%98%E7%9B%AE/dp/031.png)
+
+### 思路
+
+动规五部曲：
+
+①dp[i] 的含义：数组nums 从 0 到 i 的最大子数组和。
+
+②递推公式：
+
+* **我的递推公式**：
+  * 如果从 0 到 i - 1 的最大子数组和 小于零了，那就不要计入到之后的子数组里了，就从当前元素开始计算即 `dp[i] = nums[i];`
+  * 如果是大于零的，那么就可以继续做子数组，`dp[i] = dp[i - 1] + nums[i];`
+* **答案的递推公式**：直接看上面两个谁大就选谁。
+  * 即 `dp[i] = Math.max(nums[i], dp[i-1] + nums[i]);`
+
+其实都可以，因为递推公式后面还有一个选取较大的res 的逻辑，保证选择的是最大的子数组和。
+
+③初始化：dp[0] = nums[0];     res = nums[0];
+
+④遍历顺序：从前往后即可
+
+⑤打印dp数组
+
+![](https://code-thinking-1253855093.file.myqcloud.com/pics/20210303104129101.png)
+
+
+
+### 代码
+
+```java
+//我的代码
+class Solution {
+    public int maxSubArray(int[] nums) {
+        int len = nums.length;
+        if(len == 1){
+            return nums[0];
+        }
+
+        int[] dp = new int[len];
+        dp[0] = nums[0];
+        int res = nums[0];
+
+        for(int i = 1; i < len;i++){
+            if(dp[i-1] < 0){
+                dp[i] = nums[i];
+            }else{
+                dp[i] = dp[i-1] + nums[i];
+            }
+
+            if(dp[i] > res){
+                res = dp[i];
+            }
+        }
+
+        return res;
+    }
+}
+```
+
+
+
+```java
+//答案代码
+public static int maxSubArray(int[] nums) {
+  if (nums.length == 0) {
+    return 0;
+  }
+
+  int res = nums[0];
+  int[] dp = new int[nums.length];
+  dp[0] = nums[0];
+  for (int i = 1; i < nums.length; i++) {
+    dp[i] = Math.max(dp[i - 1] + nums[i], nums[i]);
+    res = res > dp[i] ? res : dp[i];
+  }
+  return res;
+}
+```
+
+
+
+## 三十七、判断子序列
+
+### 题目
+
+![032.png (838×990) (raw.githubusercontent.com)](https://raw.githubusercontent.com/vankykoo/javaStudy/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%AD%A6%E4%B9%A0%E9%A2%98%E7%9B%AE/dp/032.png)
+
+
+
+### 思路
+
+其实和寻找最大子序列长度的题目一样，找出最大长度，看是不是等于 s 字符串的长度就行了。
+
+
+
+### 代码
+
+```java
+class Solution {
+    public boolean isSubsequence(String s, String t) {
+        int len1 = s.length();
+        int len2 = t.length();
+
+        int[][] dp = new int[len1+1][len2+1];
+
+        for(int i = 0; i < len1; i++){
+            for(int j = 0; j < len2; j++){
+                if(s.charAt(i) == t.charAt(j)){
+                    dp[i+1][j+1] = dp[i][j] + 1;
+                }else {
+                    dp[i+1][j+1] = Math.max(dp[i][j+1], dp[i+1][j]);
+                }
+            }
+        }
+
+        return dp[len1][len2] == len1;
+    }
+}
+```
+
+
+
+## 三十八、不同的子序列
+
+### 题目
+
+![038.png (838×974) (raw.githubusercontent.com)](https://raw.githubusercontent.com/vankykoo/javaStudy/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%AD%A6%E4%B9%A0%E9%A2%98%E7%9B%AE/dp/038.png)
+
+### 思路
+
+动规五部曲：
+
+①dp\[i][j] 的含义：字符串s 在[0, i-1] 区间 的子序列 中 t [0,j-1] 出现的个数。
+
+例如：s = rabbbit      t = rabbit
+
+ dp\[5][3]表示 rabbb的子序列中 rab 出现的个数。
+
+②递推公式：
+
+* 如果 两个字符相等：`dp[j+1][i+1] = dp[j][i+1] + dp[j][i];`
+* 如果两个字符不相等：`dp[j+1][i+1] = dp[j][i+1];`
+
+③初始化：
+
+把s对应的第一行或是第一列初始化为1【看你s是行还是列】
+
+④遍历顺序：
+
+双重for循环，外层是t，内层是s，从前往后
+
+⑤打印dp数组：
+
+![](https://code-thinking.cdn.bcebos.com/pics/115.%E4%B8%8D%E5%90%8C%E7%9A%84%E5%AD%90%E5%BA%8F%E5%88%97.jpg)
+
+
+
+### 代码
+
+```java
+//我的代码
+class Solution {
+    public int numDistinct(String s, String t) {
+        int len1 = s.length();
+        int len2 = t.length();
+
+        int[][] dp = new int[len1+1][len2+1];
+        for(int i = 0; i < len1; i++){
+            dp[i][0] = 1;
+        }
+
+        for(int i = 0; i < len2; i++){
+            for(int j = i; j < len1; j++){
+                if(s.charAt(j) == t.charAt(i)){
+                    dp[j+1][i+1] = dp[j][i+1] + dp[j][i];
+                }else{
+                    dp[j+1][i+1] = dp[j][i+1];
+                }
+            }
+        }
+
+        return dp[len1][len2];
+    }
+}
+```
+
+答案代码
+
+```java
+class Solution {
+    public int numDistinct(String s, String t) {
+        int[][] dp = new int[s.length() + 1][t.length() + 1];
+        for (int i = 0; i < s.length() + 1; i++) {
+            dp[i][0] = 1;
+        }
+        
+        for (int i = 1; i < s.length() + 1; i++) {
+            for (int j = 1; j < t.length() + 1; j++) {
+                if (s.charAt(i - 1) == t.charAt(j - 1)) {
+                    dp[i][j] = dp[i - 1][j - 1] + dp[i - 1][j];
+                }else{
+                    dp[i][j] = dp[i - 1][j];
+                }
+            }
+        }
+        
+        return dp[s.length()][t.length()];
+    }
+}
+```
 
 
 
 
 
+## 三十九、两个字符串的删除操作
+
+### 题目
+
+![039.png (835×722) (raw.githubusercontent.com)](https://raw.githubusercontent.com/vankykoo/javaStudy/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%AD%A6%E4%B9%A0%E9%A2%98%E7%9B%AE/dp/039.png)
 
 
 
+### 思路
+
+其实就在找 公共最长子序列 ，然后让两个字符串都减去 这个长度，相加，就是最后结果了
+
+
+
+### 代码
+
+```java
+class Solution {
+    public int minDistance(String word1, String word2) {
+        int len1 = word1.length();
+        int len2 = word2.length();
+
+        int[][] dp = new int[len1+1][len2+1];
+        
+        for(int i = 0; i < len1; i++){
+            for(int j = 0; j < len2; j++){
+                if(word1.charAt(i) == word2.charAt(j)){
+                    dp[i+1][j+1] = dp[i][j] + 1;
+                }else{
+                    dp[i+1][j+1] = Math.max(dp[i+1][j], dp[i][j+1]);
+                }
+            }
+        }
+
+        return len1 + len2 - 2 * dp[len1][len2];
+    }
+}
+```
+
+
+
+
+
+## 四十、编辑距离
+
+### 题目
+
+![040.png (828×1054) (raw.githubusercontent.com)](https://raw.githubusercontent.com/vankykoo/javaStudy/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%AD%A6%E4%B9%A0%E9%A2%98%E7%9B%AE/dp/040.png)
+
+### 思路
+
+动规五部曲
+
+①dp\[i][j] 的含义：**表示以下标i-1为结尾的字符串word1，和以下标j-1为结尾的字符串word2，最近编辑距离为`dp[i][j]`**。
+
+②递推公式：
+
+* word2.charAt(i) == word1.charAt(j) 时不操作
+  * `dp[i][j] = dp[i-1][j-1]`
+* word2.charAt(i) != word1.charAt(j) 时操作
+  * 删除、插入操作：`dp[i][j] = Math.min(dp[i][j - 1],dp[i - 1][j]) + 1;`
+  * 替换操作：`dp[i][j] = dp[i - 1][j - 1] + 1`
+
+所有，总的递推公式是取他们的最小值：``
+
+`dp[i][j] = Math.min(dp[i-1][j-1], Math.min(dp[i][j-1], dp[i-1][j])) + 1;`
+
+③初始化：下标为0 表示空字符串。
+
+所以`for(int i = 0; i < len1; i++) dp[0][i] = i;`
+
+​	`for(int i = 0; i < len2; i++) dp[i][0] = i;`
+
+④遍历顺序：双层for循环，从前往后
+
+⑤打印dp数组
+
+![](https://code-thinking-1253855093.file.myqcloud.com/pics/20210114162132300.jpg)
+
+
+
+
+
+### 代码
+
+```java
+public int minDistance(String word1, String word2) {
+    int m = word1.length();
+    int n = word2.length();
+    int[][] dp = new int[m + 1][n + 1];
+    // 初始化
+    for (int i = 1; i <= m; i++) {
+        dp[i][0] =  i;
+    }
+    for (int j = 1; j <= n; j++) {
+        dp[0][j] = j;
+    }
+    for (int i = 1; i <= m; i++) {
+        for (int j = 1; j <= n; j++) {
+            // 因为dp数组有效位从1开始
+            // 所以当前遍历到的字符串的位置为i-1 | j-1
+            if (word1.charAt(i - 1) == word2.charAt(j - 1)) {
+                dp[i][j] = dp[i - 1][j - 1];
+            } else {
+                dp[i][j] = Math.min(Math.min(dp[i - 1][j - 1], dp[i][j - 1]), dp[i - 1][j]) + 1;
+            }
+        }
+    }
+    return dp[m][n];
+}
+```
+
+
+
+
+
+## 四十一、回文子串
+
+### 题目
+
+![042.png (827×945) (raw.githubusercontent.com)](https://raw.githubusercontent.com/vankykoo/javaStudy/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%AD%A6%E4%B9%A0%E9%A2%98%E7%9B%AE/dp/042.png)
+
+### 思路
+
+动规五部曲：
+
+①`dp[i][j]` 的含义：表示下标从 i 到 j 的字符串是不是回文串。
+
+②递推公式：
+
+* 判断从i 到 j 是不是回文串，先判断下标为 i 和 j 的字符是否相等，如果相等，看 下标从 i + 1 到 j - 1 的子串是不是回文串。
+* 一个字符和两个相同字符也是回文串。
+
+所以：
+
+```java
+if (s.charAt(i) == s.charAt(j)) {
+    if (j - i <= 1) { //一个字符或两个相同的字符
+        result++;
+        dp[i][j] = true;
+    } else if (dp[i + 1][j - 1]) { 
+        result++;
+        dp[i][j] = true;
+    }
+}
+```
+
+③dp数组的初始化：都初始化为false
+
+④遍历顺序：因为`dp[i][j]` 需要通过`dp[i+1][j-1]` 推得，所以 i 要倒序遍历，j 要正序遍历。
+
+⑤打印dp数组：
+
+![](https://code-thinking-1253855093.file.myqcloud.com/pics/20210121171059951-20230310132153163.jpg)
+
+
+
+方法二：双指针法
+
+* 两种情况：
+  * 单数长度的字符串
+  * 双数长度的字符串
+
+
+
+### 代码
+
+动态规划
+
+```java
+class Solution {
+    public int countSubstrings(String s) {
+        char[] chars = s.toCharArray();
+        int len = chars.length;
+        boolean[][] dp = new boolean[len][len];
+        int result = 0;
+        for (int i = len - 1; i >= 0; i--) {
+            for (int j = i; j < len; j++) {
+                if (chars[i] == chars[j]) {
+                    if (j - i <= 1) { // 情况一 和 情况二
+                        result++;
+                        dp[i][j] = true;
+                    } else if (dp[i + 1][j - 1]) { //情况三
+                        result++;
+                        dp[i][j] = true;
+                    }
+                }
+            }
+        }
+        return result;
+    }
+}
+```
+
+
+
+双指针法：
+
+```java
+class Solution {
+    public int countSubstrings(String s) {
+        char[] chars = s.toCharArray();
+        int result = 0;
+        for (int i = 0; i < chars.length; i++) {
+            result += extend(chars, i, i, chars.length); // 以i为中心
+            result += extend(chars, i, i + 1, chars.length); // 以i和i+1为中心
+        }
+        return result;
+    }
+  
+  public int extend(char[] chars,int i, int j, int n){
+   	    int res = 0;
+        while (i >= 0 && j < n && chars[i] == chars[j]) {
+            i--;
+            j++;
+            res++;
+        }
+        return res;
+  }
+}
+```
+
+
+
+
+
+## 四十二、最长回文子序列
+
+### 题目
+
+![052.png (830×752) (raw.githubusercontent.com)](https://raw.githubusercontent.com/vankykoo/javaStudy/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%AD%A6%E4%B9%A0%E9%A2%98%E7%9B%AE/dp/052.png)
+
+
+
+### 思路
+
+动规五部曲
+
+①`dp[i][j]` 的含义：字符串s在[i, j]范围内最长的回文子序列的长度为`dp[i][j]`。
+
+②递推公式：
+
+* 如果s[i] == s[j] ：那么`dp[i][j] == dp[i+1][j-1] + 2;`
+
+* 如果s[i] != s[j] ：那么就选择删掉一个，看哪个小就删哪个，取那个大的。
+
+  `dp[i][j] = Math.max(dp[i+1][j], dp[i][j-1]);`
+
+③初始化：需要初始化单个字符都是回文串的情况，即`dp[i][i] = 1;`
+
+④遍历顺序：看递推公式可以看出，i 必须从后面开始遍历，j 必须从前面开始遍历。
+
+⑤打印dp数组：![](https://code-thinking-1253855093.file.myqcloud.com/pics/20210127151521432.jpg)
+
+
+
+### 代码
+
+```java
+public class Solution {
+    public int longestPalindromeSubseq(String s) {
+        int len = s.length();
+        int[][] dp = new int[len + 1][len + 1];
+        for (int i = len - 1; i >= 0; i--) { // 从后往前遍历 保证情况不漏
+            dp[i][i] = 1; // 初始化
+            for (int j = i + 1; j < len; j++) {
+                if (s.charAt(i) == s.charAt(j)) {
+                    dp[i][j] = dp[i + 1][j - 1] + 2;
+                } else {
+                    dp[i][j] = Math.max(dp[i + 1][j], Math.max(dp[i][j], dp[i][j - 1]));
+                }
+            }
+        }
+        return dp[0][len - 1];
+    }
+}
+```
+
+
+
+
+
+## 四十三、总结
+
+![](https://kstar-1253855093.cos.ap-nanjing.myqcloud.com/baguwenpdf/_%E5%8A%A8%E6%80%81%E8%A7%84%E5%88%92%E6%80%9D%E7%BB%B4%E5%AF%BC%E5%9B%BE_%E9%9D%92.png)
 
 
 
