--- a/数据结构题目/1、数组.md
+++ b/数据结构题目/1、数组.md
@@ -10,21 +10,52 @@
 
 类型①：左闭右闭区间，[left,right]。
 
+> 在二分查找算法中，直接将 `start` 或 `end` 赋值为 `mid` 是不正确的，因为这样可能会错过目标元素。二分查找的目的是通过每次将搜索范围减半来尽快找到目标元素。
+>
+> 原因：
+>
+> 1. **可能错过目标元素**：
+>    - 如果目标元素恰好位于当前中间元素的左侧或右侧，而我们将 `start` 或 `end` 直接赋值为 `mid`，那么在下一次循环中，我们将会跳过包含目标元素的那一半数组，导致无法找到目标元素。
+>
+> 2. **保持搜索范围的有效性**：
+>    - 二分查找的核心是不断缩小搜索范围，直到找到目标元素或确定其不存在于数组中。将 `start` 或 `end` 更新为 `mid` 不符合这个原则，因为它没有有效地缩小搜索范围。
+>
+> 正确的做法是根据目标元素与中间元素的比较结果来更新 `start` 和 `end`：
+>
+> - 如果目标元素小于中间元素，那么我们可以确定目标元素一定在数组的左半部分（从 `start` 到 `mid-1`），因此我们将 `end` 更新为 `mid - 1`。
+> - 如果目标元素大于中间元素，那么我们可以确定目标元素一定在数组的右半部分（从 `mid + 1` 到 `end`），因此我们将 `start` 更新为 `mid + 1`。
+>
+> 这样，我们确保了每次迭代都能将搜索范围缩小一半，并且不会错过可能包含目标元素的部分。
+
+
+
 ![](https://code-thinking-1253855093.file.myqcloud.com/pics/20210311153055723.jpg)
 
 ```java
 class Solution {
+    // 定义一个方法 search，接受一个整数数组 nums 和一个目标值 target
     public int search(int[] nums, int target) {
+        // 初始化右边界为数组长度减一，左边界为0
         int right = nums.length - 1, left = 0;
-        while(right >= left){
-            int middle = (left + right) / 2;
-            if(nums[middle] == target)
-                return middle;
-            else if(nums[middle] > target)
+        int middle;
+
+        // 当右边界大于等于左边界时，继续循环
+        while (right >= left) {
+            // 计算中间索引，向下取整
+            middle = (left + right) / 2;
+            // 如果中间元素等于目标值，返回中间索引
+            if (nums[middle] == target){
+                return middle;	
+            }else if(nums[middle] > target){
+                // 如果中间元素大于目标值，将右边界更新为中间索引减一，缩小搜索范围到左半部分
                 right = middle - 1;
-            else 
+            }else{
+                // 如果中间元素小于目标值，将左边界更新为中间索引加一，缩小搜索范围到右半部分
                 left = middle + 1;
+            } 
         }
+      
+        // 如果循环结束仍未找到目标值，返回-1表示未找到
         return -1;
     }
 }
