--- a/数据结构题目/1、数组.md
+++ b/数据结构题目/1、数组.md
@@ -120,7 +120,7 @@ class Solution {
 
 
 
-解放②：定义两个指针，一个从左往右，一个从右往左；右边的找是val值的坐标，左边的找不是val值的坐标，然后交换。
+解法②：定义两个指针，一个从左往右，一个从右往左；右边的找是val值的坐标，左边的找不是val值的坐标，然后交换。
 
 ```java
 //相向指针
@@ -145,6 +145,56 @@ class Solution {
         }
 		//最后left=right，随便返回一个即可
         return right;
+    }
+}
+```
+
+
+
+### 二刷
+
+> 思路：
+>
+> 1. 使用双指针法，快指针（fast）从数组末尾开始向左搜索，慢指针（slow）从数组开头开始向右搜索。
+> 2. 当快指针指向的元素等于val时，将快指针向前移动一位；否则，说明快指针指向的元素不等于val。
+> 3. 若快指针仍大于等于慢指针，将快指针指向的元素与慢指针指向的元素交换，然后将慢指针向前移动一位，并将结果变量res自增1。
+> 4. 当快指针小于慢指针时，跳出外层循环，此时新数组的长度为res。
+> 5. 返回新数组的长度。
+
+```java
+class Solution {
+    // 定义一个公共方法removeElement，接受一个整数数组nums和一个整数值val作为参数
+    public int removeElement(int[] nums, int val) {
+        // 初始化结果变量res为0，用于记录新数组的长度
+        int res = 0;
+        
+        // 初始化两个指针fast和slow，fast初始指向数组末尾，slow初始指向数组开头
+        int fast = nums.length - 1, slow = 0;
+
+        // 当fast指针大于等于slow指针时，继续循环
+        while(fast >= slow){
+            // 如果fast指针指向的元素等于val，则将fast指针向前移动一位
+            while(fast >= slow && nums[fast] == val){
+                fast--;
+            }
+            
+            // 如果fast指针仍大于等于slow指针，说明当前fast指针指向的元素不等于val
+            if(fast >= slow){
+                //交换元素
+                int tmp = nums[fast];
+                nums[fast] = nums[slow];
+                nums[slow] = tmp;
+                
+                // 将slow指针向前移动一位
+                slow++;
+                
+                // 结果变量res自增1，表示新数组长度增加1
+                res++;
+            }
+        }
+
+        // 返回新数组的长度（即移除元素后的数组长度）
+        return res;
     }
 }
 ```
