--- a/数据结构题目/1、数组.md
+++ b/数据结构题目/1、数组.md
@@ -239,6 +239,82 @@ class Solution {
 
 
 
+### 二刷
+
+我和答案代码的思路差不多；
+
+但是很明显，答案的办法更好，从结果数组的后面开始填充，而且也不用找出right和left的初始位置。
+
+> 我的思路：
+>
+> 1. 首先判断输入数组的长度，如果长度为1，则直接计算其平方并返回。
+> 2. 创建一个新的数组res，用于存储平方后的结果。
+> 3. 使用双指针right和left初始化在原数组的正数部分和负数部分的起始位置。
+> 4. 找到数组中第一个非负数的位置，确定right和left的初始值。
+> 5. 使用while循环和双指针遍历原数组，比较左右指针所指元素的平方值，将较大的平方值填入结果数组res，并移动相应的指针。
+> 6. 当左右指针都越界或者结果数组已填充满时，结束循环。
+> 7. 返回结果数组res。
+
+```java
+class Solution {
+    public int[] sortedSquares(int[] nums) {
+        // 获取输入数组的长度
+        int len = nums.length;
+        
+        // 如果输入数组只有一个元素，直接计算其平方并返回
+        if(len == 1){
+            nums[0] *= nums[0];
+            return nums; 
+        }
+        
+        // 创建一个新的数组，用于存储平方后的结果
+        int[] res = new int[len];
+        
+        // 初始化索引变量
+        int index = 0;
+        
+        // 初始化双指针，right指向正数部分的起始位置，left指向负数部分的起始位置
+        int right = len-2,left = len-1;
+
+        // 找到数组中第一个非负数的位置
+        for(int i = 0; i < len ; i++){
+            if(nums[i] >= 0){
+                right = i - 1;
+                left = i;
+                break;
+            }
+        }
+
+        // 使用双指针遍历并填充结果数组
+        while((right >= 0 || left < len) && index < len){
+            // 如果左指针已经越界，说明右侧所有元素都已经处理过
+            if(right < 0){
+                res[index++] = nums[left] * nums[left++];
+                continue;
+            }
+
+            // 如果右指针已经越界，说明左侧所有元素都已经处理过
+            if(left >= len){
+                res[index++] = nums[right] * nums[right--];
+                continue;
+            }
+
+            // 比较左右指针所指元素的平方值，将较大的平方值填入结果数组
+            if(nums[right] * nums[right] >= nums[left] * nums[left]){
+                res[index++] = nums[left] * nums[left++];
+            }else{
+                res[index++] = nums[right] * nums[right--];
+            }
+        }
+
+        // 返回结果数组
+        return res;
+    }
+}
+```
+
+
+
 
 
 ## 四、长度最小的子数组
