--- a/数据结构题目/1、数组.md
+++ b/数据结构题目/1、数组.md
@@ -398,6 +398,62 @@ class Solution {
 
 
 
+###二刷：
+
+用到了滑动窗口方法
+
+> 思路：
+>
+> 1. 初始化双指针left和right，以及结果变量res和和变量sum。
+> 2. 使用while循环，当左指针left不小于右指针right且小于等于数组长度时，进行循环。
+> 3. 在循环中，首先检查当前子数组（nums[right]到nums[left-1]）的和sum是否小于目标值target。
+> 4. 如果sum小于target，将左指针对应的元素加入sum，并将左指针向右移动一位。
+> 5. 当sum大于等于target时，进入内部循环。在内部循环中，更新最小子数组长度res，并从sum中移除右指针对应的元素，然后将右指针向右移动一位。重复此过程，直到sum小于目标值target为止。
+> 6. 当外部循环结束时，返回结果。如果res仍为整数最大值，说明没有找到满足条件的子数组，返回0；否则返回最小子数组长度res。
+
+```java
+class Solution {
+    public int minSubArrayLen(int target, int[] nums) {
+        // 获取输入数组的长度
+        int len = nums.length;
+
+        // 初始化双指针，right指向子数组的右侧边界，left指向子数组的左侧边界
+        int right = 0, left = 0;
+
+        // 初始化结果变量，存储最小子数组长度，默认为整数最大值，表示尚未找到满足条件的子数组
+        int res = Integer.MAX_VALUE;
+        int sum = 0;
+
+        // 当左指针不小于右指针且小于等于数组长度时，进行循环
+        while (left >= right && left <= len) {
+            // 如果当前子数组和小于目标值
+            if (sum < target) {
+                // 如果左指针已经达到数组末尾，说明没有满足条件的子数组，跳出循环
+                if (left == len) {
+                    break;
+                }
+                sum += nums[left];
+                left++;
+            }
+            // 当前子数组和大于等于目标值时，进入内部循环
+            while (sum >= target) {
+                // 更新最小子数组长度（取原结果与当前子数组长度之中的较小值）
+                res = Math.min(res, left - right);
+                sum -= nums[right];
+                right++;
+            }
+        }
+
+        // 返回结果，如果res仍为整数最大值，说明没有找到满足条件的子数组，返回0；否则返回最小子数组长度
+        return res == Integer.MAX_VALUE ? 0 : res;
+    }
+}
+```
+
+
+
+
+
 ## 五、螺旋矩阵Ⅱ
 
 题目：
